# I2O_assignments

./: README.md
ProgTask_1/: main.c  main.cpp
ProgTask_2/: CMakeLists.txt  Makefile  README.md
ProgTask_2/src/: InteriorPoint.cpp  InteriorPoint.h  Matrix.cpp  Matrix.h  main.cpp
ProgTask_2/src/Simplex/: Simplex.cpp  Simplex.h
ProgTask_2/tests/: test_main.cpp
ProgTask_3/: main.cpp
ProgTask_4/: Bisection Method for Root-Finding.ccp  Bisection Method for Root-Finding.cpp  Golden Section Method for Unimodal Function Optimization.cpp  Gradient Ascent Method for Maximizing a Function.cpp
